Fixed the failing test and addressed the review comments